URI based approach to limit URL -> String -> URL conversions